src/components/Menu/index.css
.menu {
    position: absolute;
    width: 90vw;
    height: auto;
    bottom: 0dvh;
    margin: 5dvw 5dvw;
    display: flex;
    justify-content: space-between;
    z-index: 99;
    clip-path: inset(0);
}

a.navLink {
    text-decoration: none;
    cursor: pointer;
    color: white;
    font-family: 'Open Sans', sans-serif;
}

@media screen and (min-width: 768px) {
    .menu {
        width: 95vw;
        height: auto;
        bottom: 0dvh;
        margin: 2.5dvw 2.5dvw;
        display: flex;
        justify-content: space-between;
        z-index: 10;
    }
}

